parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AGRUPAR_POR
    ALGUNO
    ALGUNOS
    CASO
    COMENTARIO
    COMILLAS_SIMPLES
    COMO
    CONTAR
    CONVERTIR
    CUALQUIERA
    DIVISION
    ENTONCES
    ENTRE
    ES
    ESTABLECER_TRANSACCION
    ES_NULO
    FIN
    IDENTIFICADOR_INVALIDO
    INICIO
    LIMITAR
    MAS
    MAXIMO
    MENOS
    MEZCLAR
    MIENTRAS
    MINIMO
    MODULO
    MULTIPLICACION
    NO
    NO_ES_NULO
    NULO
    O
    OBTENER
    ORDENAR_POR
    PARA
    PROMEDIO
    PUNTO
    PUNTO_GUARDADO
    PYC
    RANGO
    REEMPLAZAR
    RESTRICCION
    SALTO_DE_LINEA
    SIMILAR_A
    SINO
    SUMA
    TENIENDO
    TODOS
    Y

Grammar

Rule 0     S' -> instruccion
Rule 1     lista_columna_crear -> IDENTIFICADOR tipo_dato restricciones
Rule 2     transaccion -> INICIAR_TRANSACCION
Rule 3     insertar -> INSERTAR_EN IDENTIFICADOR PARENTESIS_IZQ lista_columnas_creadas PARENTESIS_DER VALORES lista_filas
Rule 4     actualizar -> ACTUALIZAR IDENTIFICADOR COLOCAR lista_asignaciones opt_condiciones
Rule 5     crear -> CREAR TABLA IDENTIFICADOR PARENTESIS_IZQ lista_columnas_crear PARENTESIS_DER
Rule 6     soltar -> SOLTAR TABLA IDENTIFICADOR
Rule 7     soltar -> SOLTAR TABLA IDENTIFICADOR condicional
Rule 8     unir -> UNIR tipo_unir IDENTIFICADOR CON condicion
Rule 9     seleccion -> SELECCIONAR lista_floro lista_columnas DESDE IDENTIFICADOR opt_condiciones
Rule 10    eliminar -> eliminar_todo
Rule 11    eliminar -> eliminar_donde
Rule 12    eliminar -> eliminar_hasta_todo
Rule 13    eliminar -> eliminar_hasta_donde
Rule 14    alterar -> ALTERAR TABLA IDENTIFICADOR alteraciones
Rule 15    transaccion -> CONFIRMAR
Rule 16    lista_columnas_creadas -> IDENTIFICADOR
Rule 17    lista_columnas_creadas -> lista_columnas_creadas COMA IDENTIFICADOR
Rule 18    lista_asignaciones -> IDENTIFICADOR IGUALDAD valor
Rule 19    lista_asignaciones -> lista_asignaciones COMA IDENTIFICADOR IGUALDAD valor
Rule 20    tipo_dato -> ENTERO
Rule 21    tipo_dato -> CADENA
Rule 22    tipo_dato -> CARACTER
Rule 23    tipo_dato -> FECHA
Rule 24    tipo_dato -> BOOLEANO
Rule 25    tipo_dato -> DECIMAL
Rule 26    tipo_dato -> TEXTO
Rule 27    tipo_dato -> FLOTANTE
Rule 28    transaccion -> REVERTIR
Rule 29    tipo_unir -> NORMAL
Rule 30    tipo_unir -> IZQUIERDO
Rule 31    tipo_unir -> DERECHO
Rule 32    tipo_unir -> COMPLETO
Rule 33    tipo_unir -> empty
Rule 34    condicional -> SI EXISTE
Rule 35    eliminar_todo -> ELIMINAR DESDE IDENTIFICADOR
Rule 36    alteraciones -> alteracion
Rule 37    lista_filas -> fila
Rule 38    lista_filas -> lista_filas COMA fila
Rule 39    eliminar_donde -> ELIMINAR DESDE IDENTIFICADOR clausula
Rule 40    lista_floro -> lista_floro floro
Rule 41    lista_floro -> floro
Rule 42    alteraciones -> alteracion COMA alteraciones
Rule 43    condicion -> IDENTIFICADOR IGUALDAD IDENTIFICADOR
Rule 44    eliminar_hasta_todo -> ELIMINAR PRIMEROS VALOR_NUMERO DESDE IDENTIFICADOR
Rule 45    fila -> PARENTESIS_IZQ lista_valores PARENTESIS_DER
Rule 46    especificacion -> PARENTESIS_IZQ VALOR_NUMERO PARENTESIS_DER
Rule 47    especificacion -> empty
Rule 48    alteracion -> AGREGAR opt_column lista_columna_crear
Rule 49    empty -> <empty>
Rule 50    eliminar_hasta_donde -> ELIMINAR PRIMEROS VALOR_NUMERO DESDE IDENTIFICADOR clausula
Rule 51    floro -> DISTINTO
Rule 52    floro -> empty
Rule 53    lista_valores -> valor
Rule 54    lista_valores -> lista_valores COMA valor
Rule 55    lista_columnas_crear -> lista_columnas_crear COMA lista_columna_crear
Rule 56    lista_columnas_crear -> lista_columna_crear
Rule 57    instruccion -> seleccion
Rule 58    instruccion -> insertar
Rule 59    instruccion -> alterar
Rule 60    instruccion -> actualizar
Rule 61    instruccion -> eliminar
Rule 62    instruccion -> soltar
Rule 63    instruccion -> crear
Rule 64    instruccion -> transaccion
Rule 65    instruccion -> unir
Rule 66    instruccion -> valor
Rule 67    opt_column -> COLUMNA
Rule 68    opt_column -> empty
Rule 69    clausula -> DONDE IDENTIFICADOR comparador valor
Rule 70    restricciones -> restricciones restriccion
Rule 71    restricciones -> restriccion
Rule 72    restricciones -> empty
Rule 73    comparador -> IGUALDAD
Rule 74    comparador -> MAYOR
Rule 75    comparador -> MENOR
Rule 76    comparador -> MAYOR_IGUAL
Rule 77    comparador -> MENOR_IGUAL
Rule 78    comparador -> DIFERENTE
Rule 79    lista_columnas -> IDENTIFICADOR
Rule 80    lista_columnas -> lista_columnas COMA IDENTIFICADOR
Rule 81    lista_columnas -> TODO
Rule 82    alteracion -> SOLTAR opt_column IDENTIFICADOR
Rule 83    valor -> VALOR_NUMERO
Rule 84    valor -> VALOR_CADENA
Rule 85    valor -> VALOR_BOOLEANO
Rule 86    valor -> VALOR_FLOTANTE
Rule 87    restriccion -> CLAVE_PRIMARIA
Rule 88    restriccion -> CLAVE_FORANEA referencia
Rule 89    restriccion -> AUTOINCREMENTAL
Rule 90    restriccion -> NO_NULO
Rule 91    alteracion -> MODIFICAR opt_column lista_columna_crear
Rule 92    alteracion -> RENOMBRAR opt_column IDENTIFICADOR A IDENTIFICADOR
Rule 93    referencia -> REFERENCIA IDENTIFICADOR PARENTESIS_IZQ IDENTIFICADOR PARENTESIS_DER
Rule 94    alteracion -> CAMBIAR opt_column IDENTIFICADOR lista_columna_crear
Rule 95    opt_condiciones -> condiciones
Rule 96    opt_condiciones -> empty
Rule 97    condiciones -> condiciones clausula
Rule 98    condiciones -> clausula
Rule 99    condicion_order -> IDENTIFICADOR ASCENDENTE
Rule 100   condicion_order -> IDENTIFICADOR DESCENDENTE
Rule 101   condicion_order -> IDENTIFICADOR

Terminals, with rules where they appear

A                    : 92
ACTUALIZAR           : 4
AGREGAR              : 48
AGRUPAR_POR          : 
ALGUNO               : 
ALGUNOS              : 
ALTERAR              : 14
ASCENDENTE           : 99
AUTOINCREMENTAL      : 89
BOOLEANO             : 24
CADENA               : 21
CAMBIAR              : 94
CARACTER             : 22
CASO                 : 
CLAVE_FORANEA        : 88
CLAVE_PRIMARIA       : 87
COLOCAR              : 4
COLUMNA              : 67
COMA                 : 17 19 38 42 54 55 80
COMENTARIO           : 
COMILLAS_SIMPLES     : 
COMO                 : 
COMPLETO             : 32
CON                  : 8
CONFIRMAR            : 15
CONTAR               : 
CONVERTIR            : 
CREAR                : 5
CUALQUIERA           : 
DECIMAL              : 25
DERECHO              : 31
DESCENDENTE          : 100
DESDE                : 9 35 39 44 50
DIFERENTE            : 78
DISTINTO             : 51
DIVISION             : 
DONDE                : 69
ELIMINAR             : 35 39 44 50
ENTERO               : 20
ENTONCES             : 
ENTRE                : 
ES                   : 
ESTABLECER_TRANSACCION : 
ES_NULO              : 
EXISTE               : 34
FECHA                : 23
FIN                  : 
FLOTANTE             : 27
IDENTIFICADOR        : 1 3 4 5 6 7 8 9 14 16 17 18 19 35 39 43 43 44 50 69 79 80 82 92 92 93 93 94 99 100 101
IDENTIFICADOR_INVALIDO : 
IGUALDAD             : 18 19 43 73
INICIAR_TRANSACCION  : 2
INICIO               : 
INSERTAR_EN          : 3
IZQUIERDO            : 30
LIMITAR              : 
MAS                  : 
MAXIMO               : 
MAYOR                : 74
MAYOR_IGUAL          : 76
MENOR                : 75
MENOR_IGUAL          : 77
MENOS                : 
MEZCLAR              : 
MIENTRAS             : 
MINIMO               : 
MODIFICAR            : 91
MODULO               : 
MULTIPLICACION       : 
NO                   : 
NORMAL               : 29
NO_ES_NULO           : 
NO_NULO              : 90
NULO                 : 
O                    : 
OBTENER              : 
ORDENAR_POR          : 
PARA                 : 
PARENTESIS_DER       : 3 5 45 46 93
PARENTESIS_IZQ       : 3 5 45 46 93
PRIMEROS             : 44 50
PROMEDIO             : 
PUNTO                : 
PUNTO_GUARDADO       : 
PYC                  : 
RANGO                : 
REEMPLAZAR           : 
REFERENCIA           : 93
RENOMBRAR            : 92
RESTRICCION          : 
REVERTIR             : 28
SALTO_DE_LINEA       : 
SELECCIONAR          : 9
SI                   : 34
SIMILAR_A            : 
SINO                 : 
SOLTAR               : 6 7 82
SUMA                 : 
TABLA                : 5 6 7 14
TENIENDO             : 
TEXTO                : 26
TODO                 : 81
TODOS                : 
UNIR                 : 8
VALORES              : 3
VALOR_BOOLEANO       : 85
VALOR_CADENA         : 84
VALOR_FLOTANTE       : 86
VALOR_NUMERO         : 44 46 50 83
Y                    : 
error                : 

Nonterminals, with rules where they appear

actualizar           : 60
alteracion           : 36 42
alteraciones         : 14 42
alterar              : 59
clausula             : 39 50 97 98
comparador           : 69
condicion            : 8
condicion_order      : 
condicional          : 7
condiciones          : 95 97
crear                : 63
eliminar             : 61
eliminar_donde       : 11
eliminar_hasta_donde : 13
eliminar_hasta_todo  : 12
eliminar_todo        : 10
empty                : 33 47 52 68 72 96
especificacion       : 
fila                 : 37 38
floro                : 40 41
insertar             : 58
instruccion          : 0
lista_asignaciones   : 4 19
lista_columna_crear  : 48 55 56 91 94
lista_columnas       : 9 80
lista_columnas_creadas : 3 17
lista_columnas_crear : 5 55
lista_filas          : 3 38
lista_floro          : 9 40
lista_valores        : 45 54
opt_column           : 48 82 91 92 94
opt_condiciones      : 4 9
referencia           : 88
restriccion          : 70 71
restricciones        : 1 70
seleccion            : 57
soltar               : 62
tipo_dato            : 1
tipo_unir            : 8
transaccion          : 64
unir                 : 65
valor                : 18 19 53 54 66 69

Parsing method: LALR

state 0

    (0) S' -> . instruccion
    (57) instruccion -> . seleccion
    (58) instruccion -> . insertar
    (59) instruccion -> . alterar
    (60) instruccion -> . actualizar
    (61) instruccion -> . eliminar
    (62) instruccion -> . soltar
    (63) instruccion -> . crear
    (64) instruccion -> . transaccion
    (65) instruccion -> . unir
    (66) instruccion -> . valor
    (9) seleccion -> . SELECCIONAR lista_floro lista_columnas DESDE IDENTIFICADOR opt_condiciones
    (3) insertar -> . INSERTAR_EN IDENTIFICADOR PARENTESIS_IZQ lista_columnas_creadas PARENTESIS_DER VALORES lista_filas
    (14) alterar -> . ALTERAR TABLA IDENTIFICADOR alteraciones
    (4) actualizar -> . ACTUALIZAR IDENTIFICADOR COLOCAR lista_asignaciones opt_condiciones
    (10) eliminar -> . eliminar_todo
    (11) eliminar -> . eliminar_donde
    (12) eliminar -> . eliminar_hasta_todo
    (13) eliminar -> . eliminar_hasta_donde
    (6) soltar -> . SOLTAR TABLA IDENTIFICADOR
    (7) soltar -> . SOLTAR TABLA IDENTIFICADOR condicional
    (5) crear -> . CREAR TABLA IDENTIFICADOR PARENTESIS_IZQ lista_columnas_crear PARENTESIS_DER
    (2) transaccion -> . INICIAR_TRANSACCION
    (15) transaccion -> . CONFIRMAR
    (28) transaccion -> . REVERTIR
    (8) unir -> . UNIR tipo_unir IDENTIFICADOR CON condicion
    (83) valor -> . VALOR_NUMERO
    (84) valor -> . VALOR_CADENA
    (85) valor -> . VALOR_BOOLEANO
    (86) valor -> . VALOR_FLOTANTE
    (35) eliminar_todo -> . ELIMINAR DESDE IDENTIFICADOR
    (39) eliminar_donde -> . ELIMINAR DESDE IDENTIFICADOR clausula
    (44) eliminar_hasta_todo -> . ELIMINAR PRIMEROS VALOR_NUMERO DESDE IDENTIFICADOR
    (50) eliminar_hasta_donde -> . ELIMINAR PRIMEROS VALOR_NUMERO DESDE IDENTIFICADOR clausula

    SELECCIONAR     shift and go to state 12
    INSERTAR_EN     shift and go to state 13
    ALTERAR         shift and go to state 14
    ACTUALIZAR      shift and go to state 15
    SOLTAR          shift and go to state 20
    CREAR           shift and go to state 21
    INICIAR_TRANSACCION shift and go to state 22
    CONFIRMAR       shift and go to state 23
    REVERTIR        shift and go to state 24
    UNIR            shift and go to state 25
    VALOR_NUMERO    shift and go to state 26
    VALOR_CADENA    shift and go to state 27
    VALOR_BOOLEANO  shift and go to state 28
    VALOR_FLOTANTE  shift and go to state 29
    ELIMINAR        shift and go to state 30

    instruccion                    shift and go to state 1
    seleccion                      shift and go to state 2
    insertar                       shift and go to state 3
    alterar                        shift and go to state 4
    actualizar                     shift and go to state 5
    eliminar                       shift and go to state 6
    soltar                         shift and go to state 7
    crear                          shift and go to state 8
    transaccion                    shift and go to state 9
    unir                           shift and go to state 10
    valor                          shift and go to state 11
    eliminar_todo                  shift and go to state 16
    eliminar_donde                 shift and go to state 17
    eliminar_hasta_todo            shift and go to state 18
    eliminar_hasta_donde           shift and go to state 19

state 1

    (0) S' -> instruccion .



state 2

    (57) instruccion -> seleccion .

    $end            reduce using rule 57 (instruccion -> seleccion .)


state 3

    (58) instruccion -> insertar .

    $end            reduce using rule 58 (instruccion -> insertar .)


state 4

    (59) instruccion -> alterar .

    $end            reduce using rule 59 (instruccion -> alterar .)


state 5

    (60) instruccion -> actualizar .

    $end            reduce using rule 60 (instruccion -> actualizar .)


state 6

    (61) instruccion -> eliminar .

    $end            reduce using rule 61 (instruccion -> eliminar .)


state 7

    (62) instruccion -> soltar .

    $end            reduce using rule 62 (instruccion -> soltar .)


state 8

    (63) instruccion -> crear .

    $end            reduce using rule 63 (instruccion -> crear .)


state 9

    (64) instruccion -> transaccion .

    $end            reduce using rule 64 (instruccion -> transaccion .)


state 10

    (65) instruccion -> unir .

    $end            reduce using rule 65 (instruccion -> unir .)


state 11

    (66) instruccion -> valor .

    $end            reduce using rule 66 (instruccion -> valor .)


state 12

    (9) seleccion -> SELECCIONAR . lista_floro lista_columnas DESDE IDENTIFICADOR opt_condiciones
    (40) lista_floro -> . lista_floro floro
    (41) lista_floro -> . floro
    (51) floro -> . DISTINTO
    (52) floro -> . empty
    (49) empty -> .

  ! shift/reduce conflict for DISTINTO resolved as shift
    DISTINTO        shift and go to state 33
    IDENTIFICADOR   reduce using rule 49 (empty -> .)
    TODO            reduce using rule 49 (empty -> .)

  ! DISTINTO        [ reduce using rule 49 (empty -> .) ]

    lista_floro                    shift and go to state 31
    floro                          shift and go to state 32
    empty                          shift and go to state 34

state 13

    (3) insertar -> INSERTAR_EN . IDENTIFICADOR PARENTESIS_IZQ lista_columnas_creadas PARENTESIS_DER VALORES lista_filas

    IDENTIFICADOR   shift and go to state 35


state 14

    (14) alterar -> ALTERAR . TABLA IDENTIFICADOR alteraciones

    TABLA           shift and go to state 36


state 15

    (4) actualizar -> ACTUALIZAR . IDENTIFICADOR COLOCAR lista_asignaciones opt_condiciones

    IDENTIFICADOR   shift and go to state 37


state 16

    (10) eliminar -> eliminar_todo .

    $end            reduce using rule 10 (eliminar -> eliminar_todo .)


state 17

    (11) eliminar -> eliminar_donde .

    $end            reduce using rule 11 (eliminar -> eliminar_donde .)


state 18

    (12) eliminar -> eliminar_hasta_todo .

    $end            reduce using rule 12 (eliminar -> eliminar_hasta_todo .)


state 19

    (13) eliminar -> eliminar_hasta_donde .

    $end            reduce using rule 13 (eliminar -> eliminar_hasta_donde .)


state 20

    (6) soltar -> SOLTAR . TABLA IDENTIFICADOR
    (7) soltar -> SOLTAR . TABLA IDENTIFICADOR condicional

    TABLA           shift and go to state 38


state 21

    (5) crear -> CREAR . TABLA IDENTIFICADOR PARENTESIS_IZQ lista_columnas_crear PARENTESIS_DER

    TABLA           shift and go to state 39


state 22

    (2) transaccion -> INICIAR_TRANSACCION .

    $end            reduce using rule 2 (transaccion -> INICIAR_TRANSACCION .)


state 23

    (15) transaccion -> CONFIRMAR .

    $end            reduce using rule 15 (transaccion -> CONFIRMAR .)


state 24

    (28) transaccion -> REVERTIR .

    $end            reduce using rule 28 (transaccion -> REVERTIR .)


state 25

    (8) unir -> UNIR . tipo_unir IDENTIFICADOR CON condicion
    (29) tipo_unir -> . NORMAL
    (30) tipo_unir -> . IZQUIERDO
    (31) tipo_unir -> . DERECHO
    (32) tipo_unir -> . COMPLETO
    (33) tipo_unir -> . empty
    (49) empty -> .

    NORMAL          shift and go to state 41
    IZQUIERDO       shift and go to state 42
    DERECHO         shift and go to state 43
    COMPLETO        shift and go to state 44
    IDENTIFICADOR   reduce using rule 49 (empty -> .)

    tipo_unir                      shift and go to state 40
    empty                          shift and go to state 45

state 26

    (83) valor -> VALOR_NUMERO .

    $end            reduce using rule 83 (valor -> VALOR_NUMERO .)
    COMA            reduce using rule 83 (valor -> VALOR_NUMERO .)
    DONDE           reduce using rule 83 (valor -> VALOR_NUMERO .)
    PARENTESIS_DER  reduce using rule 83 (valor -> VALOR_NUMERO .)


state 27

    (84) valor -> VALOR_CADENA .

    $end            reduce using rule 84 (valor -> VALOR_CADENA .)
    COMA            reduce using rule 84 (valor -> VALOR_CADENA .)
    DONDE           reduce using rule 84 (valor -> VALOR_CADENA .)
    PARENTESIS_DER  reduce using rule 84 (valor -> VALOR_CADENA .)


state 28

    (85) valor -> VALOR_BOOLEANO .

    $end            reduce using rule 85 (valor -> VALOR_BOOLEANO .)
    COMA            reduce using rule 85 (valor -> VALOR_BOOLEANO .)
    DONDE           reduce using rule 85 (valor -> VALOR_BOOLEANO .)
    PARENTESIS_DER  reduce using rule 85 (valor -> VALOR_BOOLEANO .)


state 29

    (86) valor -> VALOR_FLOTANTE .

    $end            reduce using rule 86 (valor -> VALOR_FLOTANTE .)
    COMA            reduce using rule 86 (valor -> VALOR_FLOTANTE .)
    DONDE           reduce using rule 86 (valor -> VALOR_FLOTANTE .)
    PARENTESIS_DER  reduce using rule 86 (valor -> VALOR_FLOTANTE .)


state 30

    (35) eliminar_todo -> ELIMINAR . DESDE IDENTIFICADOR
    (39) eliminar_donde -> ELIMINAR . DESDE IDENTIFICADOR clausula
    (44) eliminar_hasta_todo -> ELIMINAR . PRIMEROS VALOR_NUMERO DESDE IDENTIFICADOR
    (50) eliminar_hasta_donde -> ELIMINAR . PRIMEROS VALOR_NUMERO DESDE IDENTIFICADOR clausula

    DESDE           shift and go to state 46
    PRIMEROS        shift and go to state 47


state 31

    (9) seleccion -> SELECCIONAR lista_floro . lista_columnas DESDE IDENTIFICADOR opt_condiciones
    (40) lista_floro -> lista_floro . floro
    (79) lista_columnas -> . IDENTIFICADOR
    (80) lista_columnas -> . lista_columnas COMA IDENTIFICADOR
    (81) lista_columnas -> . TODO
    (51) floro -> . DISTINTO
    (52) floro -> . empty
    (49) empty -> .

  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
  ! shift/reduce conflict for TODO resolved as shift
  ! shift/reduce conflict for DISTINTO resolved as shift
    IDENTIFICADOR   shift and go to state 49
    TODO            shift and go to state 51
    DISTINTO        shift and go to state 33

  ! IDENTIFICADOR   [ reduce using rule 49 (empty -> .) ]
  ! TODO            [ reduce using rule 49 (empty -> .) ]
  ! DISTINTO        [ reduce using rule 49 (empty -> .) ]

    lista_columnas                 shift and go to state 48
    floro                          shift and go to state 50
    empty                          shift and go to state 34

state 32

    (41) lista_floro -> floro .

    IDENTIFICADOR   reduce using rule 41 (lista_floro -> floro .)
    TODO            reduce using rule 41 (lista_floro -> floro .)
    DISTINTO        reduce using rule 41 (lista_floro -> floro .)


state 33

    (51) floro -> DISTINTO .

    IDENTIFICADOR   reduce using rule 51 (floro -> DISTINTO .)
    TODO            reduce using rule 51 (floro -> DISTINTO .)
    DISTINTO        reduce using rule 51 (floro -> DISTINTO .)


state 34

    (52) floro -> empty .

    IDENTIFICADOR   reduce using rule 52 (floro -> empty .)
    TODO            reduce using rule 52 (floro -> empty .)
    DISTINTO        reduce using rule 52 (floro -> empty .)


state 35

    (3) insertar -> INSERTAR_EN IDENTIFICADOR . PARENTESIS_IZQ lista_columnas_creadas PARENTESIS_DER VALORES lista_filas

    PARENTESIS_IZQ  shift and go to state 52


state 36

    (14) alterar -> ALTERAR TABLA . IDENTIFICADOR alteraciones

    IDENTIFICADOR   shift and go to state 53


state 37

    (4) actualizar -> ACTUALIZAR IDENTIFICADOR . COLOCAR lista_asignaciones opt_condiciones

    COLOCAR         shift and go to state 54


state 38

    (6) soltar -> SOLTAR TABLA . IDENTIFICADOR
    (7) soltar -> SOLTAR TABLA . IDENTIFICADOR condicional

    IDENTIFICADOR   shift and go to state 55


state 39

    (5) crear -> CREAR TABLA . IDENTIFICADOR PARENTESIS_IZQ lista_columnas_crear PARENTESIS_DER

    IDENTIFICADOR   shift and go to state 56


state 40

    (8) unir -> UNIR tipo_unir . IDENTIFICADOR CON condicion

    IDENTIFICADOR   shift and go to state 57


state 41

    (29) tipo_unir -> NORMAL .

    IDENTIFICADOR   reduce using rule 29 (tipo_unir -> NORMAL .)


state 42

    (30) tipo_unir -> IZQUIERDO .

    IDENTIFICADOR   reduce using rule 30 (tipo_unir -> IZQUIERDO .)


state 43

    (31) tipo_unir -> DERECHO .

    IDENTIFICADOR   reduce using rule 31 (tipo_unir -> DERECHO .)


state 44

    (32) tipo_unir -> COMPLETO .

    IDENTIFICADOR   reduce using rule 32 (tipo_unir -> COMPLETO .)


state 45

    (33) tipo_unir -> empty .

    IDENTIFICADOR   reduce using rule 33 (tipo_unir -> empty .)


state 46

    (35) eliminar_todo -> ELIMINAR DESDE . IDENTIFICADOR
    (39) eliminar_donde -> ELIMINAR DESDE . IDENTIFICADOR clausula

    IDENTIFICADOR   shift and go to state 58


state 47

    (44) eliminar_hasta_todo -> ELIMINAR PRIMEROS . VALOR_NUMERO DESDE IDENTIFICADOR
    (50) eliminar_hasta_donde -> ELIMINAR PRIMEROS . VALOR_NUMERO DESDE IDENTIFICADOR clausula

    VALOR_NUMERO    shift and go to state 59


state 48

    (9) seleccion -> SELECCIONAR lista_floro lista_columnas . DESDE IDENTIFICADOR opt_condiciones
    (80) lista_columnas -> lista_columnas . COMA IDENTIFICADOR

    DESDE           shift and go to state 60
    COMA            shift and go to state 61


state 49

    (79) lista_columnas -> IDENTIFICADOR .

    DESDE           reduce using rule 79 (lista_columnas -> IDENTIFICADOR .)
    COMA            reduce using rule 79 (lista_columnas -> IDENTIFICADOR .)


state 50

    (40) lista_floro -> lista_floro floro .

    IDENTIFICADOR   reduce using rule 40 (lista_floro -> lista_floro floro .)
    TODO            reduce using rule 40 (lista_floro -> lista_floro floro .)
    DISTINTO        reduce using rule 40 (lista_floro -> lista_floro floro .)


state 51

    (81) lista_columnas -> TODO .

    DESDE           reduce using rule 81 (lista_columnas -> TODO .)
    COMA            reduce using rule 81 (lista_columnas -> TODO .)


state 52

    (3) insertar -> INSERTAR_EN IDENTIFICADOR PARENTESIS_IZQ . lista_columnas_creadas PARENTESIS_DER VALORES lista_filas
    (16) lista_columnas_creadas -> . IDENTIFICADOR
    (17) lista_columnas_creadas -> . lista_columnas_creadas COMA IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 62

    lista_columnas_creadas         shift and go to state 63

state 53

    (14) alterar -> ALTERAR TABLA IDENTIFICADOR . alteraciones
    (36) alteraciones -> . alteracion
    (42) alteraciones -> . alteracion COMA alteraciones
    (48) alteracion -> . AGREGAR opt_column lista_columna_crear
    (82) alteracion -> . SOLTAR opt_column IDENTIFICADOR
    (91) alteracion -> . MODIFICAR opt_column lista_columna_crear
    (92) alteracion -> . RENOMBRAR opt_column IDENTIFICADOR A IDENTIFICADOR
    (94) alteracion -> . CAMBIAR opt_column IDENTIFICADOR lista_columna_crear

    AGREGAR         shift and go to state 66
    SOLTAR          shift and go to state 67
    MODIFICAR       shift and go to state 68
    RENOMBRAR       shift and go to state 69
    CAMBIAR         shift and go to state 70

    alteraciones                   shift and go to state 64
    alteracion                     shift and go to state 65

state 54

    (4) actualizar -> ACTUALIZAR IDENTIFICADOR COLOCAR . lista_asignaciones opt_condiciones
    (18) lista_asignaciones -> . IDENTIFICADOR IGUALDAD valor
    (19) lista_asignaciones -> . lista_asignaciones COMA IDENTIFICADOR IGUALDAD valor

    IDENTIFICADOR   shift and go to state 71

    lista_asignaciones             shift and go to state 72

state 55

    (6) soltar -> SOLTAR TABLA IDENTIFICADOR .
    (7) soltar -> SOLTAR TABLA IDENTIFICADOR . condicional
    (34) condicional -> . SI EXISTE

    $end            reduce using rule 6 (soltar -> SOLTAR TABLA IDENTIFICADOR .)
    SI              shift and go to state 74

    condicional                    shift and go to state 73

state 56

    (5) crear -> CREAR TABLA IDENTIFICADOR . PARENTESIS_IZQ lista_columnas_crear PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 75


state 57

    (8) unir -> UNIR tipo_unir IDENTIFICADOR . CON condicion

    CON             shift and go to state 76


state 58

    (35) eliminar_todo -> ELIMINAR DESDE IDENTIFICADOR .
    (39) eliminar_donde -> ELIMINAR DESDE IDENTIFICADOR . clausula
    (69) clausula -> . DONDE IDENTIFICADOR comparador valor

    $end            reduce using rule 35 (eliminar_todo -> ELIMINAR DESDE IDENTIFICADOR .)
    DONDE           shift and go to state 78

    clausula                       shift and go to state 77

state 59

    (44) eliminar_hasta_todo -> ELIMINAR PRIMEROS VALOR_NUMERO . DESDE IDENTIFICADOR
    (50) eliminar_hasta_donde -> ELIMINAR PRIMEROS VALOR_NUMERO . DESDE IDENTIFICADOR clausula

    DESDE           shift and go to state 79


state 60

    (9) seleccion -> SELECCIONAR lista_floro lista_columnas DESDE . IDENTIFICADOR opt_condiciones

    IDENTIFICADOR   shift and go to state 80


state 61

    (80) lista_columnas -> lista_columnas COMA . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 81


state 62

    (16) lista_columnas_creadas -> IDENTIFICADOR .

    PARENTESIS_DER  reduce using rule 16 (lista_columnas_creadas -> IDENTIFICADOR .)
    COMA            reduce using rule 16 (lista_columnas_creadas -> IDENTIFICADOR .)


state 63

    (3) insertar -> INSERTAR_EN IDENTIFICADOR PARENTESIS_IZQ lista_columnas_creadas . PARENTESIS_DER VALORES lista_filas
    (17) lista_columnas_creadas -> lista_columnas_creadas . COMA IDENTIFICADOR

    PARENTESIS_DER  shift and go to state 82
    COMA            shift and go to state 83


state 64

    (14) alterar -> ALTERAR TABLA IDENTIFICADOR alteraciones .

    $end            reduce using rule 14 (alterar -> ALTERAR TABLA IDENTIFICADOR alteraciones .)


state 65

    (36) alteraciones -> alteracion .
    (42) alteraciones -> alteracion . COMA alteraciones

    $end            reduce using rule 36 (alteraciones -> alteracion .)
    COMA            shift and go to state 84


state 66

    (48) alteracion -> AGREGAR . opt_column lista_columna_crear
    (67) opt_column -> . COLUMNA
    (68) opt_column -> . empty
    (49) empty -> .

    COLUMNA         shift and go to state 86
    IDENTIFICADOR   reduce using rule 49 (empty -> .)

    opt_column                     shift and go to state 85
    empty                          shift and go to state 87

state 67

    (82) alteracion -> SOLTAR . opt_column IDENTIFICADOR
    (67) opt_column -> . COLUMNA
    (68) opt_column -> . empty
    (49) empty -> .

    COLUMNA         shift and go to state 86
    IDENTIFICADOR   reduce using rule 49 (empty -> .)

    opt_column                     shift and go to state 88
    empty                          shift and go to state 87

state 68

    (91) alteracion -> MODIFICAR . opt_column lista_columna_crear
    (67) opt_column -> . COLUMNA
    (68) opt_column -> . empty
    (49) empty -> .

    COLUMNA         shift and go to state 86
    IDENTIFICADOR   reduce using rule 49 (empty -> .)

    opt_column                     shift and go to state 89
    empty                          shift and go to state 87

state 69

    (92) alteracion -> RENOMBRAR . opt_column IDENTIFICADOR A IDENTIFICADOR
    (67) opt_column -> . COLUMNA
    (68) opt_column -> . empty
    (49) empty -> .

    COLUMNA         shift and go to state 86
    IDENTIFICADOR   reduce using rule 49 (empty -> .)

    opt_column                     shift and go to state 90
    empty                          shift and go to state 87

state 70

    (94) alteracion -> CAMBIAR . opt_column IDENTIFICADOR lista_columna_crear
    (67) opt_column -> . COLUMNA
    (68) opt_column -> . empty
    (49) empty -> .

    COLUMNA         shift and go to state 86
    IDENTIFICADOR   reduce using rule 49 (empty -> .)

    opt_column                     shift and go to state 91
    empty                          shift and go to state 87

state 71

    (18) lista_asignaciones -> IDENTIFICADOR . IGUALDAD valor

    IGUALDAD        shift and go to state 92


state 72

    (4) actualizar -> ACTUALIZAR IDENTIFICADOR COLOCAR lista_asignaciones . opt_condiciones
    (19) lista_asignaciones -> lista_asignaciones . COMA IDENTIFICADOR IGUALDAD valor
    (95) opt_condiciones -> . condiciones
    (96) opt_condiciones -> . empty
    (97) condiciones -> . condiciones clausula
    (98) condiciones -> . clausula
    (49) empty -> .
    (69) clausula -> . DONDE IDENTIFICADOR comparador valor

    COMA            shift and go to state 94
    $end            reduce using rule 49 (empty -> .)
    DONDE           shift and go to state 78

    opt_condiciones                shift and go to state 93
    condiciones                    shift and go to state 95
    empty                          shift and go to state 96
    clausula                       shift and go to state 97

state 73

    (7) soltar -> SOLTAR TABLA IDENTIFICADOR condicional .

    $end            reduce using rule 7 (soltar -> SOLTAR TABLA IDENTIFICADOR condicional .)


state 74

    (34) condicional -> SI . EXISTE
